1.2.8p12:
    Core & Setup:
    * 3857 FIX: Creation of crash reports could lead to further bugs...

    Checks & Agents:
    * 3837 FIX: Fixed empty check if lnx_if info contains additional line...
    * 3804 FIX: Datasource programs: fixed possible Check_MK Helper exception when creation of subprocess fails
    * 3808 FIX: df.include: fixed incorrect levels calculations on very small filesystems...
    * 3809 FIX: windows agent: no longer truncates plugin output, no longer freezes when plugin produces too much output...
    * 3888 FIX: df checks: Fixed invalid displayed WARN / CRIT lines in graphs when using "bytes left" thresholds

    Multisite:
    * 3874 FIX: fixed graphs displaying wrong labels
    * 3858 FIX: Fixed crash report and snapshot creation when using Python <2.5 (e.g. with CentOS 5)
    * 3885 FIX: Fixed sorting of version in werk list (1.2.8p10 and 1.2.8p11 were not listed on top)

    Notifications:
    * 3860 FIX: EC condition: Fixed default value of rule id selection

    Event Console:
    * 3884 FIX: Notifications: Fixed wrong LASTSERVICESTATE and SERVICESTATE in EC notifications...

    HW/SW-Inventory:
    * 3811 FIX: HW/SW Inventory: Fixed GUI display crash when querying data from older software versions...


1.2.8p11:
    Checks & Agents:
    * 3797 Check_MK Check helpers: Decreased memory consumption in distributed setups...
    * 3798 FIX: Clusters: Fixed invalid timestamp of last cached agent data...
    * 3848 FIX: megaraid_pdisks: Handle "rebuild" state as WARNING instead of UNKNOWN
    * 3849 FIX: check_cpu_peaks: Fixed broken active check
    * 3870 FIX: elphase.include: more robust against none type params
    * 3801 FIX: Fixed race condition with persisted data...
    * 3802 FIX: Fixed excess Check Helper PIPEs when a datasource program runs into a timeout...

    Multisite:
    * 3850 FIX: Fixed JS error when quicksearch snapin not in sidebar
    * 3871 FIX: stale services view: excluded services in downtime per default
