@@ -1,6 +1,7 @@
 1.2.8p12:
     Core & Setup:
     * 3857 FIX: Creation of crash reports could lead to further bugs...
+    * 3889 FIX: Fixed incompatiblity with Python 2.4 (CentOS 5.5) introduced with 1.2.8p11...
 
     Checks & Agents:
     * 3837 FIX: Fixed empty check if lnx_if info contains additional line...
